Mon May 19 13:47:52 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h include/tds.h src/dblib/dblib.c src/tds/mem.c
	  src/tds/read.c:
	- implement dbsetinterrupt().

Mon May 19 12:28:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/moreandcount.c:
	- fixed more&count test

Mon May 19 11:26:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/locale.c: cleanup

Sun May 18 20:05:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: continue RPC work

Sat May 17 20:11:17 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tdsodbc.h src/odbc/native.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/prepare_query.c:
	* src/tds/query.c:
	- start RPC on ODBC
	- reuse some code

Sat May 17 14:48:43 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/prepare_query.c:
	- cleanup and docs

Thu May 16 17:25:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/getmac.c: get MAC address on Linux

Thu May 15 21:14:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/pool/Makefile.am:
	- fix compile problem with HP/UX 11

Thu May 15 16:35:56 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/odbc.c src/odbc/odbc_util.c:
	- some small changes
	- support mssql quoting like [foo]

Thu May 15 15:22:14 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	- place first GNU names
	* src/tds/iconv.c: use some symbolic constants
	* src/tds/locale.c: cleanup

Thu May 15 02:46:52 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/alternative_character_sets.h 
	- removed perl code, sorted by canonical name
	- added Tru64 names
	
Wed May 14 20:50:04 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c src/tds/mem.c: fix iconv init and clean

Wed May 14 14:13:53 EDT 2003	JK Lowden <jklowden@schemamania.org>