@@ -2,21 +2,20 @@
 
 /* Test for SQLMoreResults */
 
-static char software_version[] = "$Id: t0004.c,v 1.11 2003/04/01 12:01:39 freddy77 Exp $";
+static char software_version[] = "$Id: t0004.c,v 1.12 2003/05/20 10:48:27 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
-int
-main(int argc, char *argv[])
+static int
+Test(int use_indicator)
 {
 	char buf[128];
 	SQLINTEGER ind;
-
-	Connect();
+	SQLINTEGER pind = use_indicator ? &ind : NULL;
 
 	strcpy(buf, "I don't exist");
 	ind = strlen(buf);
 
-	if (SQLBindParameter(Statement, 1, SQL_PARAM_INPUT, SQL_C_CHAR, SQL_VARCHAR, 20, 0, buf, 128, &ind) != SQL_SUCCESS) {
+	if (SQLBindParameter(Statement, 1, SQL_PARAM_INPUT, SQL_C_CHAR, SQL_VARCHAR, 20, 0, buf, 128, pind) != SQL_SUCCESS) {
 		printf("Unable to bind parameter\n");
 		exit(1);
 	}
@@ -41,6 +40,7 @@ main(int argc, char *argv[])
 		exit(1);
 	}
 
+	/* use same binding above */
 	strcpy(buf, "sysobjects");
 	ind = strlen(buf);
 
@@ -63,6 +63,15 @@ main(int argc, char *argv[])
 		printf("Not expected another recordset\n");
 		exit(1);
 	}
+}
+
+int
+main(int argc, char *argv[])
+{
+	Connect();
+
+	Test(1);
+	Test(0);
 
 	Disconnect();
 
