@@ -1,3 +1,8 @@
+Tue May 20 12:49:20 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* include/tdsodbc.h src/odbc/odbc.c src/odbc/unittests/t0004.c:
+	- fix bug binding parameters with NULL indicator
+	- improve test for detect fixed bug
+
 Mon May 19 13:47:52 EDT 2003	nsc <Nicholas_Castellano@acml.com>
 	* include/sybdb.h include/tds.h src/dblib/dblib.c src/tds/mem.c
 	  src/tds/read.c:
